# ace-helper

./: .gitignore  ACE_verify.bat  CLAUDE.md  README.md  UPDATE_TEST_GUIDE.md  index.html  latest.json.example  package-lock.json  package.json  package.json.local_test_bak
.github/workflows/: release.yml
scripts/: generate-update-json.js  local-update-server.js  switch-config.js  test-update-full.js
src/: App.vue  main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.dev.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: hooks.nsi
src-tauri/src/: lib.rs  main.rs
src/assets/: doodle.css
src/components/: AboutPage.vue  AppSettings.vue  LogSection.vue  OptimizationSettings.vue  ProcessCard.vue  Sidebar.vue  TopBar.vue  UpdateNotification.vue
src/components/icons/: AppIcon.vue  ArrowRightIcon.vue  BellIcon.vue  CatIcon.vue  CheckIcon.vue  CloseIcon.vue  DownloadIcon.vue  ExternalLinkIcon.vue  HardDriveIcon.vue  HelpIcon.vue  HomeIcon.vue  IconBase.vue  LightbulbIcon.vue  LinkIcon.vue  LoaderIcon.vue  PackageIcon.vue  PartyIcon.vue  PauseIcon.vue  PawIcon.vue  PlayIcon.vue  RefreshIcon.vue  RocketIcon.vue  RotateIcon.vue  SaveIcon.vue  SearchIcon.vue  SearchIcon2.vue  SettingsIcon.vue  ShieldIcon.vue  SparklesIcon.vue  ToolsIcon.vue  TrayIcon.vue  WindowIcon.vue  ZapIcon.vue  index.ts
src/composables/: useAutoMonitor.ts  useLogs.ts  useProcess.ts  useSettings.ts
src/config/: ioPriority.ts  priority.ts
src/types/: index.ts
src/utils/: configStorage.ts
test-updates/: latest.json
(+4 files in other folders)
