[package]
name = "ace-helper"
version = "0.3.3"
description = "ACE 小助手 - 可爱又实用的 ACE 进程优化工具"
authors = ["NanCheng"]
license = "MIT"
repository = "https://github.com/NanCheng-L/ace-helper"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ace_helper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-autostart = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
sysinfo = "0.30"
chrono = "0.4"
winapi = { version = "0.3", features = ["processthreadsapi", "winbase", "handleapi", "securitybaseapi", "winnt", "errhandlingapi", "libloaderapi"] }
libc = "0.2"
